#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_PREREQ(2.59)
AC_INIT(atslog, 2.0.3, samm@os2.kiev.ua)


AC_CONFIG_SRCDIR([src/atslogd/atslogd.h])
#AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
#AC_PROG_AWK
#AC_PROG_RM


AC_PROG_PERL_VERSION(5.6.0,,AC_MSG_ERROR(atslog require perl>=5.6.0))
AC_PROG_PERL_MODULES(Sys::Syslog,,AC_MSG_ERROR(atslog requires SYS:Syslog))
AC_PROG_PERL_MODULES(DBI,,AC_MSG_ERROR(atslog requires DBI))
AC_PROG_PERL_MODULES(POSIX,,AC_MSG_ERROR(atslog requires POSIX))
# AM_MISSING_PROG(YYY, yyy)


AC_ARG_VAR(ATSLOG_DB_HOST,[Hostname where ATSlog database located])
AC_ARG_VAR(ATSLOG_DB_NAME,[Name of ATSlog database])
AC_ARG_VAR(ATSLOG_DB_USER,[Name of ATSlog database user])
AC_ARG_VAR(ATSLOG_DB_PASS,[Password of ATSlog database user])


if test "$ATSLOG_DB_HOST" == ""; then
    AC_SUBST(ATSLOG_DB_HOST,[localhost])
fi
if test "$ATSLOG_DB_NAME" == ""; then
    AC_SUBST(ATSLOG_DB_NAME,[atslog])
fi

if test "$ATSLOG_DB_USER" == ""; then
    AC_SUBST(ATSLOG_DB_USER,[atslog])
fi

AC_ARG_WITH(webdir,
    [  --with-webdir=<path>       prefix of web directory],
    [WEB_PREFIX=$with_webdir],
    AC_MSG_ERROR([You must call configure with the --with-webdir option.
    This tells configure where to install PHP and web files and scripts.
    e.g. --with-webdir=/var/www/html/atslog or --with-mysql=/usr/local/www/atslog])
)
			  
# Checks for libraries.
# FIXME: Replace `main' with a function in `-lwrap':
AC_CHECK_LIB([wrap], [main])

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([bzero gethostbyname inet_ntoa memset socket strcasecmp strchr strerror strncasecmp strspn])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

